---------------------------------------------------------------

Changes in Go4 v5.1.x (Summer 2016)
1. Handle mouse wheel events in QtRoot interface, used in ROOT zooming
2. Bugfix in parameter Editor: format string precision for Float_t, Double_t, and Double32_t was reduced to defaults. 
   Now it supports full range of data type and exponential formatting. 


Changes in Go4 v5.1.2 (May 2016)
1. Let configure default line width for objects draw. Useful for 4K monitors,
   where default line width (=1) is too tiny.  
2. Bugfix - when creating hotstart, TLatex object was added to picture specials twice,
   which leads to crash when such picture need to be deleted.  
3. When running go4analysis, one could specify alternative (newer) JSROOT
   version like go4analysis -random -jsroot http://jsroot.gsi.de/latest/
4. Fix problem with ROOT6 - it requires exact location of go4 include files
   when running GUI or analysis. Especially important when doing "make install" 
5. Preserve frame position in the hotstart, do not reset frame with every update.
6. New Viewpanel feature: double click on histogram pad does unzoom of axes. For subpads, still
   another viewpanel with the subpad is opened.
7. Bugfix in viewpanel redrawing: in v5.1.0 statistic and label boxes could disappear or be scrambled 
   when mouse was moved over them. This was an unwanted side-effect of the previous TGraph/polygon condition crash bugfix.
8. Changed default test lmd file names of examples to  $GO4SYS/data/test.lmd instead /GSI/lea/gauss.lmd.
   New method TGo4Analysis::GetDefaultTestFileName() that delivers the actual path to this file in the
   current installation.
9. Added panel defaults for 1d histogram draw fill color and style. Like the default line width, this
   is included in go4 settings.   
10. Python support: restructured the whole module: moved things that are not interesting for a user, 